Fix overlapping multi-line HTML <mark> tags

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@ html {
   background: var(--cl-gutter);
 }
 
+mark {
+  line-height: 2;
+  background-color: var(--bg-white) !important;
+  color: var(--cl-white) !important;
+}
+
 .App {
   background: var(--cl-gutter);
   font-family: "Manrope", sans-serif;
@@ -26,9 +32,4 @@ html {
 .bg-black {
   background: var(--bg-black);
   color: var(--cl-black) !important;
-}
-
-.bg-image {
-  color: var(--cl-black) !important;
-  text-shadow: 0px 0px 3px black;
 }
